--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -97,22 +97,47 @@
 }
 
 #heart-click {
-  color: black;
+  color: #929292;
+  font-size: 11px;
 }
 #heart-click img {
   width: 40px;
   height: 40px;
   padding: 25px;
-  position: absolute;
-  right: 40px;
+  position: relative;
+  float: right;
 }
 
 #heart-click span {
-  border: 1px solid black;
-  font-family: sans-serif;
-  padding: 5px 12px;
+  background-color: #FFFFFF;
+  border: 2px solid #EFEFEF;
   border-radius: 3px;
-  position: absolute;
+  padding: 2px 10px;
+  position: relative;
+  float: right;
+  font-family: sans-serif;
+  text-decoration: none;
+  top: 35px;
   right: 15px;
-  top: 35%;
+}
+
+#heart-click span:after,  #heart-click span:before{
+  border: solid transparent;
+  content: ' ';
+  height: 0;
+  right: 100%;
+  position: absolute;
+  width: 0;
+}
+
+#heart-click span:after {
+  border-width: 3px;
+  border-right-color: #FFF;
+  top: 6px;
+}
+
+#heart-click span:before {
+  border-width: 5px;
+  border-right-color: #EFEFEF;
+  top: 4px;
 }
