--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -76,6 +76,7 @@
   font-weight: bold;
   color: #555555;
   margin: 15px 0 0 0;
+  padding-top: 5px;
   border-top: 1px solid #CCC;
   word-wrap: break-word;
 }
